<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>au.edu.unimelb</groupId>
  <artifactId>dragon</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  	<dependencies>
	  	<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.2</version>
		</dependency>
		
		<dependency>
		    <groupId>commons-cli</groupId>
		    <artifactId>commons-cli</artifactId>
		    <version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>1.25</version>
		</dependency>
	</dependencies>
	
	
	
	<build>
	  <resources>
        <resource>
          <directory>src/main/resources</directory>
          <filtering>true</filtering>
         </resource>
      </resources> 
	  <plugins>
	  	<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>
			<version>3.8.1</version>
			<configuration>
				<release>11</release>
			</configuration>
		</plugin>
	    <plugin>
	      <artifactId>maven-assembly-plugin</artifactId>
	      <executions>
		    <execution>
		      <id>jar-with-dependencies</id>
		      <configuration>
		      	<descriptorRefs>
			    	<descriptorRef>jar-with-dependencies</descriptorRef>
			    </descriptorRefs>
		        <archive>
		          <index>true</index>
		          <manifest>
		            <mainClass>dragon.Run</mainClass>
		             <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
	                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
		          </manifest>
		          <manifestEntries>
		            	<Premain-Class>dragon.Agent</Premain-Class>
		          </manifestEntries>
		        </archive>
		        <!-- <finalName>${project.artifactId}-${project.version}</finalName>
	        	<appendAssemblyId>false</appendAssemblyId>-->
		      </configuration>
		      <phase>package</phase>
		      <goals>
		        <goal>single</goal>
		      </goals>
		    </execution>
		    <execution>
		    	<id>distro</id>
		    	<configuration>
		    		<descriptors>
		        		<descriptor>src/assembly/distro.xml</descriptor>
		        	</descriptors>
		    	</configuration>
		    	<phase>package</phase>
			   <goals>
			    <goal>single</goal>
			   </goals>
		    </execution>
		  </executions>
	    </plugin>
	  </plugins>
	</build>
</project>